# hoyserv

./: README.md
gameserv/: Makefile.am  android_build.sh  build.sh  configure.ac
gameserv/client/: Makefile.am  client.c  client.h
gameserv/common/: Makefile.am  data_frag.c  hashmap.c  iohandler.c  list.c  pack.c  sockets.c  thr_pool.c  threads.c  timer.c  utils.c  wait.c
gameserv/include/: Makefile.am  protos.h
gameserv/include/common/: Makefile.am  data_frag.h  hashmap.h  iohandler.h  list.h  log.h  pack.h  sockets.h  thr_pool.h  threads.h  timer.h  utils.h  wait.h
gameserv/samples/: Makefile  Makefile.am  client_sample.c  client_sample_netplay.c  client_sample_rooms.c
gameserv/serv/: Makefile.am  center_serv.c  cli_mgr.c  cli_mgr.h  main.c  node_mgr.c  node_mgr.h  node_serv.c  protos_internal.h  serv.h  task.h  task_protos.c  turn.c  turn.h
